# atomrootfsinit

./: Cargo.toml  README.md  block-add-partition-uuid-into-uevent.patch  initramfs.md  staticbuild.sh
.cargo/: config.toml
.github/workflows/: release.yml
docs/: boot-flow.md  deployments.md  examples.rdtab  non-initramfs.md  runtime.md
rpm/: atomrootfsinit.spec
src/: change_dir.rs  config.rs  lib.rs  link.rs  main.rs  mount.rs  pivot_root.rs  string.rs  switch_root.rs  vector.rs
