[package]
name = "atomrootfsinit"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
version = "0.5.1"
edition = "2021"

[dependencies]
libc = { version = "*", features = [] }

[profile.release]
strip = "debuginfo"
lto = "thin"
panic = "unwind"

[package.metadata.deb]
license-file = ["LICENSE.md", "4"]
extended-description = """\
An init program to mount rootfs before transferring process to \
systemd or any other deamon to allow easy atomic updates of a \
root filesystem without using A/B partitioning."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/atomrootfsinit", "usr/bin/", "755"],
]
