[package]
name = "atomrootfsinit"
description = "Simple rust software to mount filesystems"
homepage = "https://github.com/NeroReflex/atomrootfsinit"
authors = ["Denis Benato <benato.denis96@gmail.com>"]
version = "0.6.22"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
libc = { version = "*", features = [] }

[features]
default = []
droptosh = []
trace = []

[profile.release]
strip = "debuginfo"
lto = "thin"

[package.metadata.deb]
license-file = ["LICENSE.md", "4"]
extended-description = """\
An init program to mount rootfs before transferring process to \
systemd or any other deamon to allow easy atomic updates of a \
root filesystem without using A/B partitioning."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/atomrootfsinit", "usr/bin/", "755"],
]
